--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@ Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
-
+@import 'ips';
 /***************FONTS****************/
 
 @font-face {
@@ -80,7 +80,9 @@ a, a:link, a:visited, a:active{
 .clearfix { *zoom: 1; }
 
 
+
 @import 'front';
 @import 'nav';
+@import 'slicknav';
 /*@import 'blog';
 @import 'single';*/
