--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,8 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
+@import 'ips';
+
 /***************FONTS****************/
 
 @font-face {
@@ -84,5 +86,6 @@ a, a:link, a:visited, a:active{
 @import 'front';
 @import 'nav';
 @import 'slicknav';
+
 /*@import 'blog';
 @import 'single';*/
