--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -86,6 +86,10 @@ a, a:link, a:visited, a:active{
 @import 'front';
 @import 'nav';
 @import 'slicknav';
-
+@import 'fix-ips';
+@import 'post';
+@import 'media';
+@import 'override';
+@import 'centercol';
 /*@import 'blog';
 @import 'single';*/
