added a bunch of cool shit

--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -66,3 +66,18 @@
 		}
 	}
 }
+
+.post-content, .box-content {
+	h1 {
+		font-size: 3em;
+	}
+	h2 {
+		font-size: 2em;
+	}
+	h3 {
+		font-size: 2.5em;
+	}
+	h4 {
+		font-size: 1.8em;
+	}
+}
