--- a/assets/css/front.scss
+++ b/assets/css/front.scss
@@ -64,8 +64,10 @@
 		min-height: 25px; /* FOR DEMO PURPOSES */
 		background: url('http://www.valucre.com/uploads/set_resources_7/005d20f304c7929cbfdb3fe61d088022_mainPattern.png') 
 		repeat 50% 100%, linear-gradient(to bottom, rgba(20,60,105,0.5) 0%, rgba(20,60,100,1) 100%);
-		h2 {
+		.title, h2 {
 			font-size: 2em;
+			line-height: 45px;
+			vertical-align: middle;
 		}
 	}
 
@@ -114,4 +116,11 @@
 		display: inline-block;
 		height: 175px;
 	}
+}
+
+
+img.header-icon {
+	width: 45px;
+	height: 45px;
+	vertical-align: middle;
 }
