--- a/style.css
+++ b/style.css
@@ -118,8 +118,10 @@ a, a:link, a:visited, a:active {
     min-height: 25px;
     /* FOR DEMO PURPOSES */
     background: url("http://www.valucre.com/uploads/set_resources_7/005d20f304c7929cbfdb3fe61d088022_mainPattern.png") repeat 50% 100%, linear-gradient(to bottom, rgba(20, 60, 105, 0.5) 0%, #143c64 100%); }
-    .c-box .box-header h2 {
-      font-size: 2em; }
+    .c-box .box-header .title, .c-box .box-header h2 {
+      font-size: 2em;
+      line-height: 45px;
+      vertical-align: middle; }
   .c-box .box-content {
     position: relative;
     background-color: #3d6a99;
@@ -155,6 +157,11 @@ a, a:link, a:visited, a:active {
     width: 50%;
     display: inline-block;
     height: 175px; }
+
+img.header-icon {
+  width: 45px;
+  height: 45px;
+  vertical-align: middle; }
 
 #front-header {
   min-height: 20vh;
