--- a/assets/css/front.scss
+++ b/assets/css/front.scss
@@ -76,7 +76,7 @@
 		background-color: $valLightBlue; /* FOR DEMO PURPOSES */
 		padding: 25px 55px;
 		text-align: left;
-		font-size: 1.1em;
+		font-size: 17.6px;
 		min-height: 110px; /* FOR DEMO PURPOSES */
 		h2 {
 			font-weight: bold;
