--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ a, a:link, a:visited, a:active {
     /* FOR DEMO PURPOSES */
     padding: 25px 55px;
     text-align: left;
-    font-size: 1.1em;
+    font-size: 17.6px;
     min-height: 110px;
     /* FOR DEMO PURPOSES */ }
     .c-box .box-content h2 {
