--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,8 +1,8 @@
 /*
-Theme Name: Carlozahar
+Theme Name: Valucre
 Author: Kyle Steinle
 Author URI: http://www.knwebwork.com
-Description: A Theme For Ruthlessly Overthrowing Roleplay Forum Competition
+Description: A forum roleplay theme
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
