--- a/assets/css/slicknav.scss
+++ b/assets/css/slicknav.scss
@@ -1,17 +1,16 @@
 #vertical-slick {
-	position: absolute;
-	top: 0;
+	position: relative;
+	top: -34px;
 	left: 0;
 	right: 0;
-	z-index: 20;
+	z-index: 1;
 	display: none;
 	.slicknav {
 		margin-top: 0;
 		padding-top: 0;
 	}
 	.menu-main-menu-container {
-		display: none;
-		z-index: 20;
+		z-index: 1;
 	}
 }
 
