--- a/assets/css/front.scss
+++ b/assets/css/front.scss
@@ -65,7 +65,7 @@ p.post-info {
 		padding: 10px 10px;
 		background-color: $valDarkBlue; /* FOR DEMO PURPOSES */
 		min-height: 25px; /* FOR DEMO PURPOSES */
-		background: url('http://www.valucre.com/uploads/set_resources_7/005d20f304c7929cbfdb3fe61d088022_mainPattern.png') 
+		background: url('http://valucre.com/roleplay/wp-content/uploads/2016/09/nav-pattern.png') 
 		repeat 50% 100%, linear-gradient(to bottom, rgba(20,60,105,0.5) 0%, rgba(20,60,100,1) 100%);
 		.title, h2 {
 			font-size: 2em;
